CM: Correct alignment with preview

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,10 @@ body {
   padding-top: 0;
 }
 
+.ͼ1 .cm-content {
+  padding-top: 0;
+}
+
 .cm-editor {
   padding-left: 20px;
   padding-right: 20px;
